<resources>
    <string name="app_name">E&amp;S</string>
    <string name="boutique">BOUTIQUE</string>
    <string name="about_us">ABOUT US</string>
    <string name="campaign">CAMPAIGN</string>
    <string name="contact">CONTACT</string>
    <string name="sign_in">SIGN</string>
    <string name="like">LIKE</string>
    <string name="share">SHARE</string>
    <string name="take_picture">Take picture</string>
    <string name="win">TAKE PICTURE AND WIN AN EXCURSION</string>
    <string name="name_item">Name Item</string>
    <string name="description">Description</string>
    <string name="wish_list">ADD TO WISH LIST</string>
    <string name="partners">PARTNERS</string>
    <string name="to">TO</string>
    <string name="welcome">WELCOME</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="more_info">MORE INFO ...</string>
    <string name="close">CLOSE</string>
    <string name="make_your_order">MAKE YOUR ORDER</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_address">Enter valid address</string>
    <string name="err_msg_tel">Enter valid tel</string>
    <string name="buy">Buy</string>
    <string name="sofia">Sofia</string>
    <string name="send_to_us">SEND TO US</string>
</resources>
