<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/cameraPick"
        android:src="@drawable/image_shape"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="3dp"
        android:layout_marginTop="78dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_picture"
        android:id="@+id/takePic"
        android:layout_below="@+id/cameraPick"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/win"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/campaignText"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />




        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_to_us"
            android:id="@+id/send"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_below="@+id/takePic"
            android:layout_alignLeft="@+id/takePic"
            android:layout_alignStart="@+id/takePic"
            android:layout_alignRight="@+id/takePic"
            android:layout_alignEnd="@+id/takePic" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more_info"
        android:id="@+id/btn_info"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_marginTop="200dp"
        android:id="@+id/conteiner"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>